Fix a lot of layout issues caused by Reader container

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 .App {
   /*text-align: center;*/
-  background-color: #fffaf2;
-  color: #2b2b2b;
   height: 100vh;
   line-height: 1.5em;
   font-size: 20px;
@@ -11,4 +9,18 @@
   max-width: 53em;
   margin: 0 auto;
   text-align: center;
+}
+
+.App-ready-pid {
+  font-size: 1.2em;
+  padding: 0.2em;
+}
+
+.App-reader-container {
+  max-width: 900px;
+  max-height: 100vh;
+  height: 100%;
+  overflow: hidden;
+  margin: 0 auto;
+  position: relative;
 }
