--- a/src/components/Page.css
+++ b/src/components/Page.css
@@ -1,5 +1,6 @@
 .Page {
   display: flex;
+  overflow: auto;
 }
 
 .paragraph-container {
