--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+  background-color: #fffaf2;
+  color: #2b2b2b;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
